<resources>
    <string name="app_name">WhatsApp Clone</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="whatsapp_contacts">WhatsApp Contacts</string>
    <string name="starred_message">Starred message</string>
    <string name="payment">Payment</string>
    <string name="setting">Setting</string>
    <string name="linked_device">Linked device</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="new_group">New group</string>
    <string name="camera">Camera</string>
    <string name="more">More</string>
    <string name="search">Search</string>
    <string name="viewed_updates">Viewed updates</string>
    <string name="recent_updates">Recent updates</string>
    <string name="tap_to_add_status_update">Tap to add status update</string>
    <string name="my_status">My Status</string>
    <string name="muted_updates">Muted updates</string>
    <string name="last_message">Last message</string>
    <string name="user_name">User Name</string>
</resources>